<resources>
    <string name="app_name">Linguaphile</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Nav Bar -->
    <string name="navBarHome">Home</string>
    <string name="navBarAddVocab">Add New Vocabulary</string>
    <string name="navBarMG">Mini Game</string>
    <string name="navBarMP">My Profile</string>
    <string name="navBarMA">My Achievement</string>
    <string name="navBarMT">My Translator</string>

    <!-- Vocabulary RecyclerView item -->
    <string name="vrName">Vocabulary</string>
    <string name="vrType">Type: </string>
    <string name="vrMeaning">Meanings: </string>
    <string name="vrSynonym">Synonyms: </string>
    <string name="vrNote">Notes: </string>

    <!-- Add and Update Vocabulary Fragment -->
    <string name="addFragmentNewVocabText">New Vocabulary:</string>
    <string name="addFragmentNameHint">Enter vocabulary name</string>
    <string name="addFragmentType">Type:</string>
    <string name="addFragmentNameAndTypeNull">Name and Type are required</string>
    <string name="addFragmentMeaningText">Meaning:</string>
    <string name="addFragmentMeaningHint1">Meaning 1</string>
    <string name="addFragmentMeaningHint0">Meaning</string>
    <string name="addFragmentMeaningMax">Maximum 4 meanings allowed</string>
    <string name="addFragmentMeaningNeed">Primary Meaning is required</string>
    <string name="addFragmentMeaningBtn">Add Meaning</string>
    <string name="addFragmentSynonymHint0">Synonym</string>
    <string name="addFragmentSynonymMax">Maximum 4 synonyms allowed</string>
    <string name="addFragmentSynonymBtn">Add Synonym</string>
    <string name="addFragmentNoteBtn">Add Note</string>
    <string name="addFragmentNoteHint">Any notation for this Vocabulary?</string>
    <string name="addFragmentNoteMax">Note can only being added once</string>
    <string name="addFragmentVocabAdded">Vocabulary added!</string>
    <string name="updateFragmentVocabUpdated">Vocabulary updated!</string>
    <string name="addFragmentConfirmBtn">Add this Vocabulary</string>
    <string name="updateFragmentConfirmBtn">Update Vocabulary</string>

    <!-- Home Fragment -->
    <string name="homeFragmentSearchHint">Search vocabulary…</string>
    <string name="homeFragmentFilterDateText">Filter by Date:</string>
    <string name="homeFragmentFilterTypeText">Filter by Type:</string>
    <string name="homeFragmentVocabDeleted">Vocabulary deleted</string>

    <!-- MiniGame Fragment -->
    <string name="mgFragmentSelectModeText">Select a Test Mode</string>
    <string name="mgFragmentMeaningSetBtn">Meaning Testing</string>
    <string name="mgFragmentSynonymSetBtn">Synonym Testing</string>
    <string name="mgFragmentMeaningSet">Meaning Test</string>
    <string name="mgFragmentSynonymSet">Synonym Test</string>
    <string name="mgFragmentMeaningSetDesc">Select the answer that best defines the word below:</string>
    <string name="mgFragmentSynonymSetDesc">Select the answer that best matches the word below:</string>
    <string name="mgFragmentMeaningModeText">Meaning Test</string>
    <string name="mgFragmentMeaningModeDesc">Select the answer that best defines the word below:</string>
    <string name="mgFragmentVocab">Vocabulary Word</string>
    <string name="mgFragmentNullTitle">No Vocabulary</string>
    <string name="mgFragmentNullDesc">No vocabulary items available for testing. Please add vocabulary first.</string>
    <string name="mgFragmentModeNullDesc">No vocabulary items available for testing. Please add vocabulary first.</string>
    <string name="mgFragmentFinishTitle">Test Finished</string>
    <string name="mgFragmentFinishDesc">You scored</string>
    <string name="mgFragmentTryAgain">Try Again</string>
    <string name="mgFragmentExit">Exit</string>
    <string name="mgFragmentSAIABtn">Show All Incorrect Answer</string>

    <!-- MyTranslator Fragment -->
    <string name="mtFragmentEnterWordHint">Enter word to be translated from…</string>
    <string name="mtFragmentConfirmBtn">Translate</string>
    <string name="mtFragmentEnterTextToast">Enter text to translate…</string>
    <string name="mtFragmentProcessMsg">Processing language model…</string>
    <string name="mtFragmentProcessDialogMsg">Translating…</string>
    <string name="mtFragmentFailureMsg">Failure due to…</string>

    <!-- Profile Fragment -->
    <string name="profileFragmentUNTitle">User Name</string>
    <string name="profileFragmentUNHint">Enter new user name</string>
    <string name="profileFragmentEmailTitle">user@example.com</string>
    <string name="profileFragmentEmailHint">Enter new email</string>
    <string name="profileFragmentUpdateBtn">Update My Details</string>
    <string name="profileFragmentConfirmBtn">Confirm</string>
    <string name="profileFragmentCancelBtn">Cancel</string>
    <string name="profileFragmentLockedAvatarToast">Avatar is locked, progress with your achievements to unlock.</string>
    <string name="profileFragmentNameEmailNull">Name and Email cannot be empty</string>
    <string name="profileFragmentSuccessMsg">Details updated successfully</string>

    <!-- ShowIncorrectAnswer Fragment -->
    <string name="siaFragmentReturnBtn">Return</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>