<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:title="@string/navBarHome"
        android:icon="@drawable/home" />
    <item
        android:id="@+id/addVocabularyFragment"
        android:title="@string/navBarAddVocab"
        android:icon="@drawable/add" />
    <item
        android:id="@+id/miniGameFragment"
        android:title="@string/navBarMG"
        android:icon="@drawable/console" />
    <item
        android:id="@+id/profileFragment"
        android:title="@string/navBarMP"
        android:icon="@drawable/user" />
    <item
        android:id="@+id/myAchievementFragment"
        android:title="@string/navBarMA"
        android:icon="@drawable/goal" />

    <item
        android:id="@+id/myTranslatorFragment"
        android:title="@string/navBarMT"
        android:icon="@drawable/translator" />
</menu>
