<!--fragment_update_vocabulary.xml-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Header -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/addFragmentNewVocabText" />

        <!-- Name -->
        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addFragmentNameHint" />

        <!-- Type -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/addFragmentType" />
        <!-- Type Spinner -->
        <Spinner
            android:id="@+id/typeSpinner"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:entries="@array/vocabulary_types" />

        <!-- Meaning -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/addFragmentMeaningText" />
        <!-- Mandatory Meaning 1 -->
        <EditText
            android:id="@+id/meaning1EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/addFragmentMeaningHint1" />

        <!-- Container for additional meanings with delete icon -->
        <LinearLayout
            android:id="@+id/meaningLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
        <Button
            android:id="@+id/addMeaningButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addFragmentMeaningBtn" />

        <!-- Container for additional synonyms with delete icon -->
        <LinearLayout
            android:id="@+id/synonymLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
        <Button
            android:id="@+id/addSynonymButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addFragmentSynonymBtn" />

        <!-- Container for additional note with delete icon -->
        <LinearLayout
            android:id="@+id/noteLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">
        </LinearLayout>
        <Button
            android:id="@+id/addNoteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addFragmentNoteBtn" />

        <!-- Confirm button -->
        <Button
            android:id="@+id/updateVocabularyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/updateFragmentConfirmBtn" />
    </LinearLayout>
</ScrollView>
